--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,3 +14,6 @@ BugReports: https://github.com/camposvieira/rsisagua/issues
 Suggests: 
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
+Imports: 
+    janitor,
+    dplyr
