real update description

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,12 @@
 Package: rsisagua
 Title: Download and filter Sisagua files from Portal de Dados Abertos
 Version: 0.0.0.9000
-Authors@R: 
-    person("Gabriel", "Vieira", "camposvieiragabriel@gmail.com", role = c("aut", "cre"),
+Authors@R: person("Gabriel", "Vieira", email = "camposvieiragabriel@gmail.com", role = c("aut", "cre"),
            comment = c(ORCID = "YOUR-ORCID-ID"))
-Description: Conjunto de funções para download dos conjuntos de dados do Sistema de
-Informacoes de Vigilancia da Qualidade da Agua para Consumo Humano (Sisagua)
-disponiveis no Portal Brasileiro de Dados Abertos,com filtros por periodo,
-regiao geografica e unidade federativa.
+Description: Conjunto de funções para download dos conjuntos de dados do Sistema de    
+    Informacoes de Vigilancia da Qualidade da Agua para Consumo Humano (Sisagua)
+    disponiveis no Portal Brasileiro de Dados Abertos,com filtros por periodo,
+    regiao geografica e unidade federativa.
 License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
