--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,4 +3,7 @@
 export("%>%")
 export(download_cadastro)
 export(download_ciano)
+export(download_cmamostras)
+export(download_cmdp)
+export(download_cmpb)
 importFrom(magrittr,"%>%")
