update functions without check warning

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,4 +6,10 @@ export(download_ciano)
 export(download_cmamostras)
 export(download_cmdp)
 export(download_cmpb)
+export(download_cs)
+export(download_infraoperacionais)
+export(download_ptocaptacao)
+export(download_tratamento)
+export(download_vigdp)
+export(download_vigpb)
 importFrom(magrittr,"%>%")
