--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,7 +3,7 @@ Title: Download and filter Sisagua files from Portal Brasileiro de Dados Abertos
 Version: 0.0.0.9000
 Authors@R: person("Gabriel", "Vieira", email = "camposvieiragabriel@gmail.com", role = c("aut", "cre"),
            comment = c(ORCID = "YOUR-ORCID-ID"))
-Description: Conjunto de funções para download dos conjuntos de dados do Sistema de    
+Description: Conjunto de funcoes para download dos conjuntos de dados do Sistema de    
     Informacoes de Vigilancia da Qualidade da Agua para Consumo Humano (Sisagua)
     disponiveis no Portal Brasileiro de Dados Abertos,com filtros por periodo,
     regiao geografica e unidade federativa.
