--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -21,7 +21,8 @@ Imports:
     dplyr,
     magrittr,
     data.table,
-    usethis
+    usethis,
+    stringr
 Depends: 
     R (>= 2.10)
 LazyData: true
